Update font and letter spacing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="style.css"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hi, I am Zhiyang</h1>
-    <p>I'm a product designer focusing on UI and UX design. I'm also very good at visual design, branding, motion graphics and web development.</p>
-    <p>Currently I'm studying integrated innovation at Carnegie Mellon University.</p>
+    <h1>Hi, I am Zhiyang Li, product designer focusing on UI and UX design.</h1>
 </body>
 </html>
