Update letter spacing and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zhiyang Li</title>
     <link rel="stylesheet" href="style.css"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="image/favicon.png">
+    <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
 </head>
 <body>
     <h1>Hi, I am Zhiyang Li, product designer focusing on UI and UX design.</h1>
