--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/favicon.png">
     <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <main>
