--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
     <main>
         <header>
-            <h1 class="title-fly-in">Hi, I am Zhiyang</h1>
-            <a class="link-profile link-profile-fly-in" href="index.html">Profile</a>
+            <h1>Hi, I am Zhiyang</h1>
+            <a class="link-profile" href="index.html">Profile</a>
         </header>
-        <p class="self-introduction self-introduction-fly-in">I’m a product designer focusing on UI and UX design. I’m also very good at visual design, branding, motion graphics and web development. </p>
-        <p class="current-state current-state-fly-in">Currently I’m studying integrated innovation at Carnegie Mellon University.</p>
-        <h2 class="selected-works selected-works-fly-in">Selected Works:</h2>
-        <a class="link-product-tour card link-product-tour-fly-in" href="index.html"></a>
-        <h3 class="title-product-tour card-title title-product-tour-fly-in"><b>Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h3>
-        <a class="link-diagram-library card link-diagram-library-fly-in" href="index.html"></a>
-        <h3 class="title-diagram-library card-title title-diagram-library-fly-in"><b>Diagram Library</b> — Technical diagram drawing for marketing content.</h3>
-        <a class="link-yunify-glyph card link-yunify-glyph-fly-in" href="index.html"></a>
-        <h3 class="title-yunify-glyph card-title title-yunify-glyph-fly-in"><b>Yunify Glyph</b> — 24px icon design for QingCloud.</h3>
-        <a class="link-xxpie card link-xxpie-fly-in" href="index.html"></a>
-        <h3 class="title-xxpie card-title title-xxpie-fly-in"><b>XXpie</b> — Photo album tool for photographers with full platform support.</h3>
+        <p class="self-introduction">I’m a product designer focusing on UI and UX design. I’m also very good at visual design, branding, motion graphics and web development. </p>
+        <p class="current-state">Currently I’m studying integrated innovation at Carnegie Mellon University.</p>
+        <h2 class="selected-works">Selected Works:</h2>
+        <a class="link-product-tour card" href="index.html"></a>
+        <h3 class="title-product-tour card-title"><b>Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h3>
+        <a class="link-diagram-library card" href="index.html"></a>
+        <h3 class="title-diagram-library card-title"><b>Diagram Library</b> — Technical diagram drawing for marketing content.</h3>
+        <a class="link-yunify-glyph card" href="index.html"></a>
+        <h3 class="title-yunify-glyph card-title"><b>Yunify Glyph</b> — 24px icon design for QingCloud.</h3>
+        <a class="link-xxpie card" href="index.html"></a>
+        <h3 class="title-xxpie card-title"><b>XXpie</b> — Photo album tool for photographers with full platform support.</h3>
         <div class="seperator"></div>
         <footer>
             <p>Crafted by hands in Pittsburgh<br><b>© 2022 Zhiyang Li</b></p>
