--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="link-xxpie card" href="index.html"></a>
         <h3 class="title-xxpie card-title"><b>XXpie</b> — Photo album tool for photographers with full platform support.</h3>
         <footer>
-            <p>Crafted by hands in Pittsburgh<br><b>© 2022 Zhiyang Li</b></p>
+            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
         </footer>
     </main>
 
