Add profile page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <header>
             <h1>Hi, I am Zhiyang</h1>
-            <a class="link-profile" href="index.html">Profile</a>
+            <a class="link-profile" href="/profile/">Profile</a>
         </header>
         <p class="self-introduction">I’m a product designer focusing on UI and UX design. I’m also very good at visual design, branding, motion graphics and web development. </p>
         <p class="current-state">Currently I’m studying integrated innovation at Carnegie Mellon University.</p>
