Fix font in mobile screen

--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -43,7 +43,11 @@
         <h3 class="paragraph-title pt-1">Interactive Demo</h3>
         <p class="body-text fp-1">The core of Product Tour is a step-by-step, interactive demo. You can experience the general flow in the sample above.</p>
         <div class="video-container-1">
-            <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" autoplay loop></video>
+            <div class="position-box-1">
+                <div class="position-container-1">
+                    <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" autoplay loop></video>
+                </div>
+            </div>
         </div>
         <div class="feature-2">
             <h3 class="paragraph-title pt-2">Product Tour</h3>
@@ -54,7 +58,11 @@
             <p class="body-text fp-3">The Community page offers community edition of SmartX’s software, previous blog posts,  Product Tour, as well as an access to group chat on WeCom or QQ.</p>
         </div>
         <div class="video-container-2">
-            <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" autoplay loop></video>
+            <div class="position-box-2">
+                <div class="position-container-2">
+                    <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" autoplay loop></video>
+                </div>
+            </div>
         </div>
         <div class="seperator s-3"></div>
         <h2 class="section-title st-2" id="Process">Process</h2>
@@ -80,9 +88,20 @@
         </div>
         <p class="body-text fp-5">When developing the concept I tried 2 different directions. One of them is to provide a similar feel to video streaming service like Netlix, through a strongly immersive interface. The other one is to provide more information by textual explanations to help users understand the product inside and out.</p>
         <div class="video-container-3">
-            <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" autoplay loop></video>
+            <div class="position-box-3">
+                <div class="position-container-3">
+                    <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" autoplay loop></video>
+                </div>
+            </div>
         </div>
-        <img class="original-prototype-2" src="/product-tour-and-smartx-community/image/original-prototype-2.png" alt="Original prototype 2">
+        <div class="image-container-1">
+            <div class="position-box-4">
+                <div class="position-container-4">
+                    <img class="original-prototype-2" src="/product-tour-and-smartx-community/image/original-prototype-2.png" alt="Original prototype 2">
+                </div>
+            </div>
+        </div>
+        
     </main>
 
 </body>
