--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <header>
-            <img src="/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg" alt="Header Image of Product Tour and SmartX Community">
+            <img class="header-image" src="/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg" alt="Header Image of Product Tour and SmartX Community">
         </header>
         <h1><b class="bold-title">Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h1>
         <div class="seperator s-1"></div>
@@ -33,9 +33,9 @@
         </article>
         <ul class="quick-link">
             <li class="quick-link-item"><a class="link" href="#results">Results</a></li>
-            <li class="quick-link-item"><a class="link" href="">Process</a></li>
-            <li class="quick-link-item"><a class="link" href="">Community</a></li>
-            <li class="quick-link-item"><a class="link" href="">Others</a></li>
+            <li class="quick-link-item"><a class="link" href="#process">Process</a></li>
+            <li class="quick-link-item"><a class="link" href="#community">Community</a></li>
+            <li class="quick-link-item"><a class="link" href="#other-works">Others Works</a></li>
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="seperator s-3"></div>
-        <h2 class="section-title st-2" id="Process">Process</h2>
+        <h2 class="section-title st-2" id="process">Process</h2>
         <div class="process-title-1">
             <h5 class="subtitle">Goal</h5>
             <h4 class="process-title-text">Less burden to start with.</h4>
@@ -101,7 +101,68 @@
                 </div>
             </div>
         </div>
-        
+        <div class="video-container-4">
+            <div class="position-box-5">
+                <div class="position-container-5">
+                    <video class="original-prototype-decision" src="/product-tour-and-smartx-community/video/original-prototype-decision.mp4" autoplay loop></video>
+                </div>
+            </div>
+        </div>
+        <p class="body-text fp-6">After discussions with product managers and the CEO, we went with for first direction and moved forward with the design.</p>
+        <div class="process-title-3">
+            <h5 class="subtitle">Explore</h5>
+            <h4 class="process-title-text">Varients of the landing page.</h4>
+        </div>
+        <p class="body-text fp-7">After developing the initial concept and basic flow, I started to experiment with the design of the overview page. I tested different styles, colors, head image and layouts. Here below are some of those attempts.</p>
+        <img class="varients-of-landing-page" src="/product-tour-and-smartx-community/image/varients-of-landing-page.png" alt="Varients of landing page">
+        <div class="process-title-4">
+            <h5 class="subtitle">Explore</h5>
+            <h4 class="process-title-text">Varients of the landing page.</h4>
+        </div>
+        <p class="body-text fp-8">After developing the initial concept and basic flow, I started to experiment with the design of the overview page. I tested different styles, colors, head image and layouts. Here below are some of those attempts.</p>
+        <img class="detailed-work" src="/product-tour-and-smartx-community/image/detailed-work.png" alt="Varients of landing page">
+        <img class="little-detail-1" src="/product-tour-and-smartx-community/image/little-detail-1.png" alt="Little detail of screen edges">
+        <div class="line l-1"></div>
+        <div class="detail-description-1">
+            <h3 class="paragraph-title pt-5">Little Detail</h3>
+            <p class="body-text fp-9">Because we wanted to use a white bottom bar while making the OS interface distinct from the tutorial's control bar, we added a green border around the edges.</p>
+        </div>
+        <img class="little-detail-1-2" src="/product-tour-and-smartx-community/image/little-detail-1-2.png" alt="Little detail of screen edges from another corner">
+        <div class="process-title-5">
+            <h5 class="subtitle">Refine</h5>
+            <h4 class="process-title-text">Covers, covers.</h4>
+        </div>
+        <p class="body-text fp-10">After finishing all the designs, we were still not entirely satisfied with the covers. Perfect cover here should fullfill two conditions — on the one hand, these covers need to reflect the content of the demo; on the other hand, they need to be abstract enough to be seperated from the rest of the website.</p>
+        <video class="covers-video" src="/product-tour-and-smartx-community/video/covers-video.mp4" autoplay loop></video>
+        <div class="seperator s-4"></div>
+        <h2 class="section-title st-3" id="community">Community</h2>
+        <div class="process-title-6">
+            <h5 class="subtitle">Flow</h5>
+            <h4 class="process-title-text">A collection of touch points and resources.</h4>
+        </div>
+        <p class="body-text fp-11">Considering the habits and preferences of Chinese users, SmartX did not plan to build a community as an open public space in the beginning. Instead, our expectation was to start with small group chats and engage users with rich community resources. Thus the challenge lies in how to organize the multiple forms of content and the relationship between each of them.</p>
+        <div class="flow-container">
+            <img class="flow" src="/product-tour-and-smartx-community/image/flow.png" alt="Flow of community">
+        </div>
+        <div class="detail-description-2">
+            <h3 class="paragraph-title pt-6">Little Detail</h3>
+            <p class="body-text fp-12">To bring a sense of ceremony to the download, I designed this icon for CloudTower installation package.</p>
+        </div>
+        <div class="line l-2"></div>
+        <img class="package-sent" src="/product-tour-and-smartx-community/image/package-sent.png" alt="The modal box after installation was sent">
+        <img class="all-community-works" src="/product-tour-and-smartx-community/image/all-community-works.png" alt="The overall view of the community design works">
+        <div class="seperator s-5"></div>
+        <h2 class="section-title st-4" id="other-works">Other Works</h2>
+        <p class="body-text fp-13">During my year at SmartX, I have also designed the label feature & large display mode for CloudTower, the success stories and solution pages for the website, the logo for IOMesh, and an introduction page for hyperconvergence.</p>
+        <div class="other-works-container owc-1"></div>
+        <div class="other-works-container owc-2"></div>
+        <div class="other-works-container owc-3"></div>
+        <div class="other-works-container owc-4"></div>
+        <div class="other-works-container owc-5"></div>
+        <div class="other-works-container owc-6"></div>
+        <footer>
+            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
+        </footer>
     </main>
 
 </body>
