--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -161,7 +161,7 @@
         <div class="other-works-container owc-5"></div>
         <div class="other-works-container owc-6"></div>
         <footer>
-            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
+            <p>Crafted by hands in Pittsburgh..<br><b>© 2022 Zhiyang Li</b></p>
         </footer>
     </main>
 
