--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="self-introduction">I’m a product designer focusing on UI and UX design. I’m also very good at visual design, branding, motion graphics and web development. </p>
         <p class="current-state">Currently I’m studying integrated innovation at Carnegie Mellon University.</p>
         <h2 class="selected-works">Selected Works:</h2>
-        <a class="link-product-tour card" href="index.html"></a>
+        <a class="link-product-tour card" href="/product-tour-and-smartx-community/"></a>
         <h3 class="title-product-tour card-title"><b>Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h3>
         <a class="link-diagram-library card" href="index.html"></a>
         <h3 class="title-diagram-library card-title"><b>Diagram Library</b> — Technical diagram drawing for marketing content.</h3>
