--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -11,10 +11,8 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+    <header></header>
     <main>
-        <header>
-            <img class="header-image" src="/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg" alt="Header Image of Product Tour and SmartX Community">
-        </header>
         <h1><b class="bold-title">Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h1>
         <div class="seperator s-1"></div>
         <ul class="work-info info-name">
