Add responsive screen

--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -72,7 +72,7 @@
         <img class="visualize-goal" src="/product-tour-and-smartx-community/image/visualize-goal.jpg" alt="Image helps on visualizing of the goal">
         <div class="initial-goals">
             <h3 class="paragraph-title pt-4">Initial Goals</h3>
-            <p class="body-text fp-4">During the kick-off phase, the product manager defined the following goals in the document:</p>
+            <p class="body-text fp-ig">During the kick-off phase, the product manager defined the following goals in the document:</p>
         </div>
         <ol class="goal-list body-text">
             <li class="goal-list-item">Provides demonstrations of installation, deployment and frequently used features of CloudTower.</li>
