--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -43,7 +43,7 @@
         <div class="video-container-1">
             <div class="position-box-1">
                 <div class="position-container-1">
-                    <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" autoplay loop></video>
+                    <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
         <div class="video-container-2">
             <div class="position-box-2">
                 <div class="position-container-2">
-                    <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" autoplay loop></video>
+                    <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="video-container-3">
             <div class="position-box-3">
                 <div class="position-container-3">
-                    <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" autoplay loop></video>
+                    <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="video-container-4">
             <div class="position-box-5">
                 <div class="position-container-5">
-                    <video class="original-prototype-decision" src="/product-tour-and-smartx-community/video/original-prototype-decision.mp4" autoplay loop></video>
+                    <video class="original-prototype-decision" src="/product-tour-and-smartx-community/video/original-prototype-decision.mp4" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <h4 class="process-title-text">Covers, covers.</h4>
         </div>
         <p class="body-text fp-10">After finishing all the designs, we were still not entirely satisfied with the covers. Perfect cover here should fullfill two conditions — on the one hand, these covers need to reflect the content of the demo; on the other hand, they need to be abstract enough to be seperated from the rest of the website.</p>
-        <video class="covers-video" src="/product-tour-and-smartx-community/video/covers-video.mp4" autoplay loop></video>
+        <video class="covers-video" src="/product-tour-and-smartx-community/video/covers-video.mp4" autoplay loop playsinline></video>
         <div class="seperator s-4"></div>
         <h2 class="section-title st-3" id="community">Community</h2>
         <div class="process-title-6">
