Adjust mobile screen

--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </div>
-        <p class="body-text fp-6">After discussions with product managers and the CEO, we went with for first direction and moved forward with the design.</p>
+        <p class="body-text fp-6">After discussions with product managers and the CEO, we went with first direction and moved forward with the design.</p>
         <div class="process-title-3">
             <h5 class="subtitle">Explore</h5>
             <h4 class="process-title-text">Varients of the landing page.</h4>
