--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -37,7 +37,7 @@
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
-        <iframe class="product-tour-prototype" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FiooaAXgGxANoY4L2KUS08E%2FProduct-Tour%3Fpage-id%3D0%253A1%26node-id%3D1%253A2473%26viewport%3D241%252C48%252C0.1%26scaling%3Dscle-down%26starting-point-node-id%3D1%253A2473" allowfullscreen scrolling="yes"></iframe>
+        <iframe class="product-tour-prototype" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FiooaAXgGxANoY4L2KUS08E%2FProduct-Tour%3Fpage-id%3D0%253A1%26node-id%3D1%253A2473%26viewport%3D241%252C48%252C0.1%26scaling%3Dscle-down%26starting-point-node-id%3D1%253A2473"></iframe>
         <h3 class="paragraph-title pt-1">Interactive Demo</h3>
         <p class="body-text fp-1">The core of Product Tour is a step-by-step, interactive demo. You can experience the general flow in the sample above.</p>
         <div class="video-container-1">
