--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zhiyang</title>
+    <title>Product Tour & SmartX Community</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/favicon.png">
     <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
