--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -11,7 +11,14 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <header></header>
+    <header>
+        <a class="back" href="/index.html">
+            <svg class="back-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M8 2L14 8H12.2857V14H3.71429V8H2L8 2ZM8 10C7.44772 10 7 10.4477 7 11V13H9V11C9 10.4477 8.55228 10 8 10Z" fill="white"/>
+            </svg>
+            <span class="back-text">Back</span>
+        </a>
+    </header>
     <main>
         <h1><b class="bold-title">Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h1>
         <div class="seperator s-1"></div>
