--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Tour & SmartX Community</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image/favicon.png">
-    <link rel="apple-touch-icon" href="image/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.png">
+    <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
