Add lazyload and video poster

--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="/image/favicon.png">
     <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
     <meta name="theme-color" content="#ffffff">
+    <script src="/product-tour-and-smartx-community/script/lazysizes.min.js"></script>
 </head>
 <body>
     <header>
@@ -44,13 +45,13 @@
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
-        <iframe class="product-tour-prototype" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FiooaAXgGxANoY4L2KUS08E%2FProduct-Tour%3Fpage-id%3D0%253A1%26node-id%3D1%253A2473%26viewport%3D241%252C48%252C0.1%26scaling%3Dscle-down%26starting-point-node-id%3D1%253A2473"></iframe>
+        <iframe class="product-tour-prototype lazyload" data-src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FiooaAXgGxANoY4L2KUS08E%2FProduct-Tour%3Fpage-id%3D0%253A1%26node-id%3D1%253A2473%26viewport%3D241%252C48%252C0.1%26scaling%3Dscle-down%26starting-point-node-id%3D1%253A2473"></iframe>
         <h3 class="paragraph-title pt-1">Interactive Demo</h3>
         <p class="body-text fp-1">The core of Product Tour is a step-by-step, interactive demo. You can experience the general flow in the sample above.</p>
         <div class="video-container-1">
             <div class="position-box-1">
                 <div class="position-container-1">
-                    <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" autoplay loop playsinline></video>
+                    <video class="product-tour-video" src="/product-tour-and-smartx-community/video/product-tour-page.mp4" poster="/product-tour-and-smartx-community/image/product-tour-video-poster.jpg" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -65,7 +66,7 @@
         <div class="video-container-2">
             <div class="position-box-2">
                 <div class="position-container-2">
-                    <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" autoplay loop playsinline></video>
+                    <video class="smartx-community-video" src="/product-tour-and-smartx-community/video/smart-community-page.mp4" poster="/product-tour-and-smartx-community/image/smartx-community-edition-poster.jpg" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -76,7 +77,7 @@
             <h4 class="process-title-text">Less burden to start with.</h4>
         </div>
         <p class="body-text fp-4">In the field of IT infrastructure, a complex trial process not only affects perceptions of products — it also creates a heavy reliance on salespeople. No matter ordinary users, engineers, maintainers or resellers, they all want to try the products in a simple and clear way.</p>
-        <img class="visualize-goal" src="/product-tour-and-smartx-community/image/visualize-goal.jpg" alt="Image helps on visualizing of the goal">
+        <img class="visualize-goal lazyload" src="/product-tour-and-smartx-community/image/visualize-goal.jpg" alt="Image helps on visualizing of the goal">
         <div class="initial-goals">
             <h3 class="paragraph-title pt-4">Initial Goals</h3>
             <p class="body-text fp-ig">During the kick-off phase, the product manager defined the following goals in the document:</p>
@@ -95,7 +96,7 @@
         <div class="video-container-3">
             <div class="position-box-3">
                 <div class="position-container-3">
-                    <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" autoplay loop playsinline></video>
+                    <video class="original-prototype-video" src="/product-tour-and-smartx-community/video/original-prototype-1.mp4" poster="/product-tour-and-smartx-community/image/original-prototype-video-poster.jpg" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -109,7 +110,7 @@
         <div class="video-container-4">
             <div class="position-box-5">
                 <div class="position-container-5">
-                    <video class="original-prototype-decision" src="/product-tour-and-smartx-community/video/original-prototype-decision.mp4" autoplay loop playsinline></video>
+                    <video class="original-prototype-decision" src="/product-tour-and-smartx-community/video/original-prototype-decision.mp4" poster="/product-tour-and-smartx-community/image/original-prototype-decision-poster.jpg" autoplay loop playsinline></video>
                 </div>
             </div>
         </div>
@@ -119,13 +120,13 @@
             <h4 class="process-title-text">Varients of the landing page.</h4>
         </div>
         <p class="body-text fp-7">After developing the initial concept and basic flow, I started to experiment with the design of the overview page. I tested different styles, colors, head image and layouts. Here below are some of those attempts.</p>
-        <img class="varients-of-landing-page" src="/product-tour-and-smartx-community/image/varients-of-landing-page.png" alt="Varients of landing page">
+        <img class="varients-of-landing-page lazyload" src="/product-tour-and-smartx-community/image/varients-of-landing-page.png" alt="Varients of landing page">
         <div class="process-title-4">
             <h5 class="subtitle">Finalize</h5>
             <h4 class="process-title-text">In-depth and detailed work overall.</h4>
         </div>
         <p class="body-text fp-8">We have settled on the design of overview page after several experiments and discussions. Then I designed various states of the page, buttons and cards, and also adapted the design to mobile screens.</p>
-        <img class="detailed-work" src="/product-tour-and-smartx-community/image/detailed-work.png" alt="Varients of landing page">
+        <img class="detailed-work lazyload" src="/product-tour-and-smartx-community/image/detailed-work.png" alt="Varients of landing page">
         <div class="little-detail-1"></div>
         <div class="line l-1"></div>
         <div class="detail-description-1">
@@ -138,7 +139,7 @@
             <h4 class="process-title-text">Covers, covers.</h4>
         </div>
         <p class="body-text fp-10">After finishing all the designs, we were still not entirely satisfied with the covers. Perfect cover here should fullfill two conditions — on the one hand, these covers need to reflect the content of the demo; on the other hand, they need to be abstract enough to be seperated from the rest of the website.</p>
-        <video class="covers-video" src="/product-tour-and-smartx-community/video/covers-video.mp4" autoplay loop playsinline></video>
+        <video class="covers-video" src="/product-tour-and-smartx-community/video/covers-video.mp4" poster="/product-tour-and-smartx-community/image/covers-video-poster.jpg" autoplay loop playsinline></video>
         <div class="seperator s-4"></div>
         <h2 class="section-title st-3" id="community">Community</h2>
         <div class="process-title-6">
@@ -147,15 +148,15 @@
         </div>
         <p class="body-text fp-11">Considering the habits and preferences of Chinese users, SmartX did not plan to build a community as an open public space in the beginning. Instead, our expectation was to start with small group chats and engage users with rich community resources. Thus the challenge lies in how to organize the multiple forms of content and the relationship between each of them.</p>
         <div class="flow-container">
-            <img class="flow" src="/product-tour-and-smartx-community/image/flow.png" alt="Flow of community">
+            <img class="flow lazyload" src="/product-tour-and-smartx-community/image/flow.png" alt="Flow of community">
         </div>
         <div class="detail-description-2">
             <h3 class="paragraph-title pt-6">Little Detail</h3>
             <p class="body-text fp-12">To bring a sense of ceremony to the download, I designed this icon for CloudTower installation package.</p>
         </div>
         <div class="line l-2"></div>
-        <img class="package-sent" src="/product-tour-and-smartx-community/image/package-sent.png" alt="The modal box after installation was sent">
-        <img class="all-community-works" src="/product-tour-and-smartx-community/image/all-community-works.png" alt="The overall view of the community design works">
+        <img class="package-sent lazyload" src="/product-tour-and-smartx-community/image/package-sent.png" alt="The modal box after installation was sent">
+        <img class="all-community-works lazyload" src="/product-tour-and-smartx-community/image/all-community-works.png" alt="The overall view of the community design works">
         <div class="seperator s-5"></div>
         <h2 class="section-title st-4" id="other-works">Other Works</h2>
         <p class="body-text fp-13">During my year at SmartX, I have also designed the label feature & large display mode for CloudTower, the success stories and solution pages for the website, the logo for IOMesh, and an introduction page for hyperconvergence.</p>
