--- a/product-tour-and-smartx-community/index.html
+++ b/product-tour-and-smartx-community/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/image/favicon.png">
     <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
-    <meta name="theme-color" content="#e5e5e5">
+    <meta name="theme-color" content="#132c3c">
     <script src="/product-tour-and-smartx-community/script/lazysizes.min.js"></script>
 </head>
 <body>
