Add images and text

--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -116,6 +116,17 @@
             </div>
         </div>
         <img class="blender-screenshot" src="/diagram-library/image/blender-screenshot.png" alt="A screenshot for using blender to build the model.">
+        <div class="shift-to-minimalism">
+            <h3 class="paragraph-title pt-5">Shift to Minimalism</h3>
+            <p class="body-text fp-8">After much experimentation, we found that fully realistic 3D icons would be intrusive to the renderings of SmartX hardware products and confuse users. So we also tried to abstract the shape of the models and use Blender’s ColorRamp node to render the model as a flat image.</p>
+        </div>
+        <img class="variants-image" src="/diagram-library/image/variants.png" alt="Variants that I made in Figma.">
+        <img class="figma-panel" src="/diagram-library/image/figma-panel.png" alt="Figma's variants panel.">
+        <div class="variants">
+            <h3 class="paragraph-title pt-6">Variants</h3>
+            <p class="body-text fp-9">Thanks to Figma’s then newly introduced Variants feature, I used it to set different states for each icon. Users can easily switch between states to meet the needs of various scenarios.</p>
+        </div>
+
     </main>
 
 </body>
