Finish diagram library page

--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -126,8 +126,29 @@
             <h3 class="paragraph-title pt-6">Variants</h3>
             <p class="body-text fp-9">Thanks to Figma’s then newly introduced Variants feature, I used it to set different states for each icon. Users can easily switch between states to meet the needs of various scenarios.</p>
         </div>
-
+        <img class="software-icons-image" src="/diagram-library/image/software-icons.png" alt="Icons made for software yet ditched after test.">
+        <div class="icons-for-software">
+            <h3 class="paragraph-title pt-6">Icons for Software</h3>
+            <p class="body-text fp-9">In fact I also designed the software icons at the same time, in order to distinguish different software. However we did not use them because of the technical staff’s habit and to save the space occupied by the images.</p>
+        </div>
+        <div class="seperator s-4"></div>
+        <h2 class="section-title st-3" id="samples">Samples</h2>
+        <div class="diagrams-for-guotai diagram-background">
+            <div>
+                <img class="guotai-junan-securities-1" src="/diagram-library/image/guotai-junan-securities-1.png" alt="Wuhan data center architecture diagram">
+                <p class="image-description">Resource pool distribution</p>
+                <img class="guotai-junan-securities-2" src="/diagram-library/image/guotai-junan-securities-2.png" alt="Wuhan data center architecture diagram">
+                <p class="image-description">Shanghai Data Center — Centralized trading app cluster</p>
+            </div>
+        </div>
+        <div class="diagrams-for-healthcare-industry-solution diagram-background">
+            <div>
+                <img class="healthcare-industry-solution" src="/diagram-library/image/healthcare-industry-solution.png" alt="Diagram for healthcare industry.">
+            </div>
+        </div>
+        <footer>
+            <p>Crafted by hands in Pittsburgh.<br><b>© 2022 Zhiyang Li</b></p>
+        </footer>
     </main>
-
 </body>
 </html>
