Add first responsive screen

--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -84,13 +84,13 @@
         <img class="typical-architecture-diagram" src="/diagram-library/image/typical-architecture-diagram.png" alt="Typical architecture diagram">
         <div class="initial-goals">
             <h3 class="paragraph-title pt-4">Initial Goals</h3>
-            <p class="body-text fp-4">The typical architecture diagram in the industry is shown above, and the problems we want to solve include:</p>
+            <p class="body-text fp-ig">The typical architecture diagram in the industry is shown above, and the problems we want to solve include:</p>
         </div>
         <ol class="goal-list body-text">
             <li class="goal-list-item">No clear distiction between hardware and software.</li>
             <li class="goal-list-item">Not using professional, high-quality graphics.</li>
             <li class="goal-list-item">There is no grid to control the size and proportion of individual parts.</li>
-            <li class="goal-list-item">Difficulty in resuing individual elements.</li>
+            <li class="goal-list-item">Difficulty in reusing individual elements.</li>
         </ol>
         <div class="process-title-2">
             <h5 class="subtitle">Scales & Grids</h5>
