--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -21,7 +21,7 @@
         </a>
     </header>
     <main>
-        <h1><b class="bold-title">2Diagram Library</b> — Technical diagram drawing for marketing content.</h1>
+        <h1><b class="bold-title">Diagram Library</b> — Technical diagram drawing for marketing content.</h1>
         <div class="seperator s-1"></div>
         <ul class="work-info info-name">
             <li class="info-name-item">Company</li>
