Add iPhone 13 pro screen

--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -138,7 +138,7 @@
                 <img class="guotai-junan-securities-1" src="/diagram-library/image/guotai-junan-securities-1.png" alt="Wuhan data center architecture diagram">
                 <p class="image-description">Resource pool distribution</p>
                 <img class="guotai-junan-securities-2" src="/diagram-library/image/guotai-junan-securities-2.png" alt="Wuhan data center architecture diagram">
-                <p class="image-description">Shanghai Data Center — Centralized trading app cluster</p>
+                <p class="image-description">Shanghai Data Center</p>
             </div>
         </div>
         <div class="diagrams-for-healthcare-industry-solution diagram-background">
