Modify quick link and add touch screen limits

--- a/diagram-library/index.html
+++ b/diagram-library/index.html
@@ -40,7 +40,7 @@
         <ul class="quick-link">
             <li class="quick-link-item"><a class="link" href="#results">Results</a></li>
             <li class="quick-link-item"><a class="link" href="#process">Process</a></li>
-            <li class="quick-link-item"><a class="link" href="#community">Samples</a></li>
+            <li class="quick-link-item"><a class="link" href="#samples">Samples</a></li>
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
