Add Yunify Glyph page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3 class="title-product-tour card-title"><b>Product Tour & SmartX Community</b> — Interactive demo of SMTX OS and CloudTower with a brand new community for developers.</h3>
         <a class="link-diagram-library card" href="/diagram-library/"></a>
         <h3 class="title-diagram-library card-title"><b>Diagram Library</b> — Technical diagram drawing for marketing content.</h3>
-        <a class="link-yunify-glyph card" href="index.html"></a>
+        <a class="link-yunify-glyph card" href="/yunify-glyph/"></a>
         <h3 class="title-yunify-glyph card-title"><b>Yunify Glyph</b> — 24px icon design for QingCloud.</h3>
         <a class="link-xxpie card" href="index.html"></a>
         <h3 class="title-xxpie card-title"><b>XXpie</b> — Photo album tool for photographers with full platform support.</h3>
