--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -21,7 +21,7 @@
         </a>
     </header>
     <main>
-        <h1><b class="bold-title">Diagram Library</b> — Technical diagram drawing for marketing content.</h1>
+        <h1><b class="bold-title">Yunify Glyph</b> — 24px icon design for QingCloud.</h1>
         <div class="seperator s-1"></div>
         <ul class="work-info info-name">
             <li class="info-name-item">Company</li>
@@ -29,22 +29,33 @@
             <li class="info-name-item">Role</li>
         </ul>
         <ul class="work-info info-content">
-            <li class="info-content-item">SmartX</li>
-            <li class="info-content-item">2021</li>
-            <li class="info-content-item">Product Designer</li>
+            <li class="info-content-item">QingCloud</li>
+            <li class="info-content-item">2018</li>
+            <li class="info-content-item">Visual Designer <br>Product Designer</li>
         </ul>
         <article class="work-description">
-            <p class="body-text work-description-paragraph">As an underlying infrastructure company, SmartX needs to use architecture diagrams in a variety of contexts over time. These architecture diagrams are often used to illustrate the structure of an enterprise’s IT architecture. In general these diagrams are mainly created by pre-sales or system engineers, and used on documents or websites for solution explanations.</p>
-            <p class="body-text work-description-paragraph">We organized the architecture diagram into two parts, software and hardware, with each component placed on the grid in a modular pattern. After a lot of experiments and disccusion with marketing department colleagues, we finally settled on a scheme of wireframe with text to represent the software and icons to represent the hardware. This design balances the technical community’s perception of the architecture diagram with the uniqueness of the SmartX brand.</p>
+            <p class="body-text work-description-paragraph">QingCloud is committed to the creation of cloud-native solutions with pioneering technology, based on its self-developed core code. In terms of brand attributes, QingCloud hopes to establish a free, open and neutral concept of technology. So we attempted to design in a logical and rational way, avoiding excessive decoration and similarity to any other brands.</p>
+            <p class="body-text work-description-paragraph">In 2018 the design team started working on a design system to be used across all of the company’s products. At that time we needed a set of icons that would fit the new website’s visual style defined by Dine, while still meeting the complex and varied needs of the interface design. Eventually we kept the clean, crisp aesthetic from the previous design from agency, by means of using two shades of color and basic geometric shapes to illustrate the icon. </p>
         </article>
         <ul class="quick-link">
             <li class="quick-link-item"><a class="link" href="#results">Results</a></li>
             <li class="quick-link-item"><a class="link" href="#process">Process</a></li>
             <li class="quick-link-item"><a class="link" href="#samples">Samples</a></li>
+            <li class="quick-link-item"><a class="link" href="#other-works">Other Works</a></li>
         </ul>
         <div class="seperator s-2"></div>
         <h2 class="section-title st-1" id="results">Results</h2>
-        
+        <div class="icon-container">
+            <section class="icon-category">
+                <h3 class="category-name">Action</h3>
+                <div class="category-container">
+                    <div class="icon-container">
+                        <img class="icon-image" src="/yunify-glyph/icon/icon_refresh.svg" alt="Icon for refresh.">
+                        <p class="icon-name">Refresh</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
