Add sections and icons to Yunify Glyph

--- a/yunify-glyph/index.html
+++ b/yunify-glyph/index.html
@@ -502,6 +502,42 @@
                 </div>
             </section>
         </div>
+        <div class="seperator s-3"></div>
+        <h2 class="section-title st-2" id="process">Process</h2>
+        <div class="process-title-1">
+            <h5 class="subtitle">Goal</h5>
+            <h4 class="process-title-text">Comprehensive, unique icon set.</h4>
+        </div>
+        <p class="body-text fp-1">At QingCloud we put a lot of emphasis on the use of icons in interface design, which have a great impact on the quality and polish of our products. In general, it is common practice in the industry to use paid or free icon libraries such as Font Awesome. However, as a company with its own different pursuits, we wanted the use of icons to be more consistent with the brand’s ethos and characteristics, so we decided to develop our own set of icons that were both user-friendly and aesthetically attractive.</p>
+        <img class="typical-icon-library" src="/yunify-glyph/image/typical-icon-library.png" alt="Typical icon library">
+        <div class="initial-goals">
+            <h3 class="paragraph-title pt-1">Initial Goals</h3>
+            <p class="body-text fp-2">Most of the existing icon libraries on the web are like the one shown above, but we think our own icon set should comply with the following criteria:</p>
+        </div>
+        <ol class="goal-list body-text">
+            <li class="goal-list-item">Reflecting brand characteristics.</li>
+            <li class="goal-list-item">The icons have perfect consistency with each other.</li>
+            <li class="goal-list-item">Can be used in a variety of sizes.</li>
+            <li class="goal-list-item">Colors can be changed according to the way they were used.</li>
+            <li class="goal-list-item">Enough quantity to cover common needs.</li>
+        </ol>
+        <div class="process-title-2">
+            <h5 class="subtitle">Consistency</h5>
+            <h4 class="process-title-text">Standardized design templates.</h4>
+        </div>
+        <p class="body-text fp-3">To avoid the inconsistency caused by the designer’s unstable performance, I designed a template of 24px size. This template includes a margin of 2px width, 4 shape outlines, and guide lines to help symmetry and maintain proportion.</p>
+        <div class="image-container">
+            <img class="template-image" src="/yunify-glyph/image/template.png" alt="Icon template">
+            <img class="template-image" src="/yunify-glyph/image/icon-on-template.png" alt="Home icon on the template">
+        </div>
+        <div class="process-title-3">
+            <h5 class="subtitle">Colors</h5>
+            <h4 class="process-title-text">2 shades × 3.</h4>
+        </div>
+        <p class="body-text fp-4">Since icons may be used in different backgrounds and for various purposes, designers need to consider the appearance of the icons in 3 colors — gray, green and white. The grey one is the default icon color to be used. Green is used in the active or hover state (while mouse pointer is hovering over the icon). The white version is used on dark backgrounds.</p>
+        <img class="grey-icon" src="/yunify-glyph/image/grey-icon.png" alt="Grey icon">
+        <img class="green-icon" src="/yunify-glyph/image/green-icon.png" alt="Green icon">
+        <img class="white-icon" src="/yunify-glyph/image/white-icon.png" alt="White icon">
     </main>
 </body>
 </html>
